颜色数据存于服务器

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,7 +17,7 @@
     .dot {
         width: 10px;
         height: 10px;
-        border: 1px solid;
+        border: 1px solid rgb(145, 145, 145);
     }
 </style>
 <body>
