--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,11 +12,34 @@
         background-color: rgb(124, 123, 117);
     }
     .canvas {
-        width: max-content;
+        text-align: center;
     }
 
     canvas {
+        display: inline-block;
         vertical-align: bottom;
+    }
+
+    .common-colors {
+        width: 512px;
+        margin: 0 auto;
+        background-color: #eee;
+        padding: 3px;
+    }
+
+    .color-card {
+        width: 22px;
+        height: 22px;
+        background-color: currentColor;
+        border-radius: 3px;
+        display: inline-block;
+        margin: 5px;
+        vertical-align: bottom;
+    }
+
+    .color-card.active {
+        border: 2px solid;
+        margin: 3px;
     }
 </style>
 
@@ -25,11 +48,11 @@
         <div class="canvas">
             <canvas @click="handleCanvasClick" ref="canvas" :width="width" :height="height"></canvas>
         </div>
-        <button @click="isPickingColor = true">{{isPickingColor ? '正在取色' : '取色'}}</button>
+        <button @click="startPickingColor">{{isPickingColor ? '正在取色' : '取色'}}</button>
         <input type="color" v-model="color">
-        <label v-for="c in commonColors" :style="{color: c.value}">
-            <input type="radio" :value="c.value" v-model="color">{{c.name}}
-        </label>
+        <div class="common-colors">
+            <span v-for="c of commonColors" @click="color=c" :class="{'color-card':true,active:c==color}" :style="{color:c}"></span>
+        </div>
     </div>
 </body>
 
@@ -45,50 +68,55 @@
         el: '#app',
         data: {
             pixelData: [],
-            commonColors: [
-            { 
-                name: 'black', 
-                value: '#000000'
-            },
-            {
-                name: 'red', 
-                value: '#FF0000'
-            },
-            { 
-                name: 'orange', 
-                value:	'#FFA500'
-            },
-            { 
-                name: 'yellow', 
-                value: '#FFD700'
-            },
-            { 
-                name: 'green', 
-                value: '#008000'
-            },
-            { 
-                name: 'blue', 
-                value: '	#1E90FF'
-            },
-            { 
-                name: 'aqua', 
-                value:'#00FFFF'
-            },
-            { 
-                name: 'purple', 
-                value: '#800080'
-            },
-            { 
-                name: 'white',
-                value: '#FFFFFF'
-            },
-            ],
+            commonColors: ["#000000", "#ffffff", "#aaaaaa", "#555555", "#fed3c7", "#ffc4ce", "#faac8e", "#ff8b83", "#f44336", "#e91e63", "#e2669e", "#9c27b0", "#673ab7", "#3f51b5", "#004670", "#057197", "#2196f3", "#00bcd4", "#3be5db", "#97fddc", "#167300", "#37a93c", "#89e642", "#d7ff07", "#fff6d1", "#f8cb8c", "#ffeb3b", "#ffc107", "#ff9800", "#ff5722", "#b83f27", "#795548"],
             color: 'black',
-            width: 256,
-            height: 256,
+            width: 512,
+            height: 512,
             isPickingColor: false
         },
         methods: {
+            // 制作一个去色箭头指针
+            makeCursorImg: function(color) {
+                var cursor = document.createElement('canvas')
+                var ctx = cursor.getContext('2d')
+                cursor.width = 41
+                cursor.height = 41
+
+                ctx.beginPath()
+                ctx.lineWidth = 2
+                ctx.strokeStyle = '#000000'
+                ctx.moveTo(0, 6)
+                ctx.lineTo(12, 6)
+                ctx.moveTo(6, 0)
+                ctx.lineTo(6, 12)
+                ctx.stroke()
+
+                ctx.beginPath()
+                ctx.arc(25, 25, 14, 0, 2 * Math.PI, false)
+                ctx.lineWidth = 2
+                ctx.strokeStyle = '#000000'
+                ctx.stroke()
+                ctx.beginPath()
+                ctx.arc(25, 25, 13.4, 0, 2 * Math.PI, false)
+                ctx.fillStyle = color
+                ctx.fill()
+
+                // document.getElementById('canvas').style.cursor = 'crosshair'
+                // document.getElementById('canvas').style.cursor = 'url(' + cursor.toDataURL() + ') 6 6, crosshair'
+
+                return cursor.toDataURL()
+            },
+            updateCursor: function(e) {
+                let color = this.getCurrHoverColor(e)
+                let cursorUrl = this.makeCursorImg(color)
+                // refs Vue自带的准确元素集
+                this.$refs.canvas.style.cursor = `url(${cursorUrl}) 6 6, crosshair`
+            },
+            startPickingColor: function() {
+                this.isPickingColor = true
+                // 给 canvas绑定事件“当鼠标移动触发去色指针样式”
+                this.$refs.canvas.addEventListener('mousemove', this.updateCursor)
+            },
             // 用于功能分发
             handleCanvasClick: function(e) {
                 if(this.isPickingColor) {
@@ -111,19 +139,25 @@
                 // console.log(dot)
                 return '#' + dot[0] + dot[1] + dot[2]
             },
-            pickColor: function(e) {
-                let x = e.layerX
-                let y = e.layerY
+            getCurrHoverColor: function(e) {
+                // 更加精准的 canvas像素坐标，不会因为放大缩小而改变实际坐标
+                let x = e.offsetX
+                let y = e.offsetY
                 // 如何获取 canvas 的颜色，获取之后是一串数组（RGBA）
                 let p = this.ctx.getImageData(x, y, 1, 1).data
                 let hexColor = this.rgba2hex(p)
+                return hexColor
+            },
+            pickColor: function(e) {
+                let hexColor = this.getCurrHoverColor(e)
                 this.color = hexColor
+                // 选取结束置为 false
                 this.isPickingColor = false
+                this.$refs.canvas.removeEventListener('mousemove', this.updateCursor)
+                this.$refs.canvas.style.cursor = ``
             },
             drawDot: function(e) {
                 // 该函数参数表示(绑定的)鼠标点击事件（e），通过事件来追踪其点击的像素坐标
-                console.log(e)
-                
                 this.ws.send(JSON.stringify({
                     type: 'drawDot',
                     x: e.layerX,
@@ -162,7 +196,6 @@
                 } else {
                     data = JSON.parse(data)
                     if (data.type == 'updateDot') {
-                        console.log(data)
                         ctx.fillStyle = data.color
                         ctx.fillRect(data.x, data.y, 1, 1)
                         // Vue.set(this.pixelData[data.y], data.x, data.color)
