移动端交互行为完成

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=512, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>pixel-painter</title>
+    <title>mypainter</title>
 </head>
 <link rel="stylesheet" href="./css/main.css">
 
@@ -37,6 +37,7 @@
 <template id="unpicking">
     <i class="iconfont" id="uning">&#xe702;</i>
 </template>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
 <script src="./vue-2.5.17.js"></script>
 <script src="./js/painter.js"></script>
 
